--- a/index.html
+++ b/index.html
@@ -1,11 +1,372 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>SUHAS S L — Portfolio</title>
+  <meta name="description" content="Personal portfolio of Your Name: projects, skills, experience, and contact." />
+  <style>
+    :root{
+      --bg: #0f1220;
+      --panel: #171a2b;
+      --muted: #a9b0c7;
+      --text: #e8ecfb;
+      --brand: #7c5cff;
+      --brand-2: #19c4ff;
+      --ok: #22c55e;
+      --warn: #f59e0b;
+      --shadow: 0 10px 30px rgba(0,0,0,.35);
+      --radius: 16px;
+      --radius-sm: 12px;
+    }
+    @media (prefers-color-scheme: light){
+      :root{
+        --bg:#f7f9fc; --panel:#ffffff; --text:#0b1020; --muted:#5b6175; --shadow:0 10px 24px rgba(10, 15, 30,.08)
+      }
+    }
+    *{box-sizing:border-box}
+    html{scroll-behavior:smooth}
+    body{
+      margin:0; font: 16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Inter, sans-serif;
+      background: radial-gradient(1200px 800px at 80% -10%, rgba(124,92,255,.25), transparent 60%),
+                  radial-gradient(800px 600px at -10% 20%, rgba(25,196,255,.18), transparent 60%),
+                  var(--bg);
+      color:var(--text);
+    }
+    a{color:inherit; text-decoration:none}
+    .container{max-width:1100px; margin:0 auto; padding: 24px}
+
+    /* Navbar */
+    .nav{
+      position:sticky; top:0; z-index:10; backdrop-filter:saturate(140%) blur(10px);
+      background:linear-gradient(180deg, rgba(23,26,43,.8), rgba(23,26,43,.5));
+      border-bottom:1px solid rgba(255,255,255,.06)
+    }
+    .nav-inner{display:flex; align-items:center; justify-content:space-between; gap:16px}
+    .brand{display:flex; align-items:center; gap:10px; font-weight:700}
+    .dot{width:10px;height:10px;border-radius:50%;background:linear-gradient(135deg,var(--brand),var(--brand-2)); box-shadow:0 0 18px rgba(124,92,255,.8)}
+    .nav a{opacity:.9}
+    .nav-links{display:flex; gap:18px; align-items:center}
+    .btn{display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border-radius:999px; border:1px solid rgba(255,255,255,.12); background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02)); transition:.2s transform}
+    .btn:hover{transform:translateY(-1px)}
+
+    /* Hero */
+    .hero{display:grid; grid-template-columns:1.25fr 1fr; gap:28px; align-items:center; padding: 42px 0}
+    .card{background:var(--panel); border:1px solid rgba(255,255,255,.06); border-radius: var(--radius); box-shadow: var(--shadow)}
+    .hero .intro{padding:32px}
+    h1{font-size:clamp(28px, 4vw, 44px); line-height:1.15; margin:0 0 12px}
+    .subtitle{color:var(--muted); font-size:clamp(16px, 2vw, 18px)}
+    .badges{display:flex; flex-wrap:wrap; gap:10px; margin:18px 0}
+    .badge{padding:6px 10px; border-radius:999px; background:linear-gradient(180deg, rgba(124,92,255,.15), rgba(25,196,255,.12)); border:1px solid rgba(124,92,255,.35)}
+    .cta-row{display:flex; gap:12px; flex-wrap:wrap; margin-top:18px}
+
+    .hero .visual{ padding:0; overflow:hidden; position:relative }
+    .glow{position:absolute; inset:-30%; background: radial-gradient(500px 500px at 20% 20%, rgba(124,92,255,.35), transparent 60%), radial-gradient(600px 400px at 80% 80%, rgba(25,196,255,.3), transparent 60%)}
+    .avatar{
+      position:relative; display:flex; align-items:center; justify-content:center; padding:40px
+    }
+    .avatar-inner{ width:100%; aspect-ratio:1/1; border-radius:22px; background:linear-gradient(135deg, rgba(124,92,255,.18), rgba(25,196,255,.12)); border:1px dashed rgba(255,255,255,.2); display:grid; place-items:center}
+    .avatar svg{width:42%; opacity:.9}
+
+    /* Sections */
+    section{margin: 28px 0}
+    .section-title{display:flex; align-items:center; gap:10px; margin:0 0 14px}
+    .section-title .line{flex:1; height:1px; background:linear-gradient(90deg, rgba(124,92,255,.4), rgba(25,196,255,.2))}
+    h2{font-size:clamp(22px, 2.6vw, 28px); margin:0}
+
+    .grid{display:grid; gap:16px}
+    .grid-3{grid-template-columns:repeat(3,1fr)}
+    .grid-2{grid-template-columns:repeat(2,1fr)}
+
+    /* Cards */
+    .panel{background:var(--panel); border:1px solid rgba(255,255,255,.06); border-radius: var(--radius-sm); padding:18px; box-shadow: var(--shadow)}
+    .muted{color:var(--muted)}
+
+    .skill{display:flex; align-items:center; justify-content:space-between}
+    .bar{height:9px; background:rgba(255,255,255,.08); border-radius:999px; overflow:hidden; margin-top:8px}
+    .bar > i{display:block; height:100%; background:linear-gradient(90deg, var(--brand), var(--brand-2))}
+
+    .project{display:flex; flex-direction:column; gap:10px}
+    .project .thumb{height:150px; border-radius:12px; background:linear-gradient(135deg, rgba(124,92,255,.22), rgba(25,196,255,.18)); border:1px solid rgba(255,255,255,.08); display:grid; place-items:center}
+    .project .actions{display:flex; gap:10px; flex-wrap:wrap}
+
+    .timeline{display:grid; gap:12px}
+    .timeline-item{display:grid; grid-template-columns:auto 1fr; gap:12px; align-items:start}
+    .timeline .dot{margin-top:7px}
+
+    /* Footer */
+    footer{margin-top:36px; padding:18px; border-top:1px solid rgba(255,255,255,.08); color:var(--muted); text-align:center}
+
+    /* Responsive */
+    @media (max-width: 920px){ .hero{grid-template-columns:1fr} .grid-3{grid-template-columns:1fr 1fr} }
+    @media (max-width: 640px){ .grid-3, .grid-2{grid-template-columns:1fr} .nav-links{display:none} }
+  </style>
 </head>
 <body>
-    <h1>i am Suhas</h1>
+  <!-- NAVBAR -->
+  <nav class="nav">
+    <div class="container nav-inner">
+      <a href="#home" class="brand"><span class="dot"></span> <span>Your Name</span></a>
+      <div class="nav-links">
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#experience">Experience</a>
+        <a href="#contact">Contact</a>
+        <button class="btn" id="themeBtn" title="Toggle theme" aria-label="Toggle theme">
+          <!-- moon/sun icon swaps via JS -->
+          <span id="themeIcon">🌙</span> Theme
+        </button>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container" id="home">
+    <!-- HERO -->
+    <section class="hero">
+      <div class="card intro">
+        <h1>Hi, I'm <span style="background:linear-gradient(90deg,var(--brand),var(--brand-2)); -webkit-background-clip:text; color:transparent">Your Name</span></h1>
+        <p class="subtitle">Front‑End Developer • Java Enthusiast • Manual/Automation Testing Learner</p>
+        <div class="badges">
+          <span class="badge">Java • OOP</span>
+          <span class="badge">HTML • CSS • JS</span>
+          <span class="badge">Manual & Automation Testing</span>
+          <span class="badge">Responsive UI</span>
+        </div>
+        <p class="muted">I build clean, fast, and accessible web experiences. I enjoy crafting components, testing them well, and turning ideas into delightful products.</p>
+        <div class="cta-row">
+          <a class="btn" href="#projects">View Projects</a>
+          <a class="btn" href="#contact">Contact Me</a>
+          <a class="btn" href="resume.pdf" download>Download Résumé</a>
+        </div>
+      </div>
+      <div class="card visual">
+        <div class="glow" aria-hidden="true"></div>
+        <div class="avatar">
+          <div class="avatar-inner">
+            <!-- Simple avatar placeholder (replace with your photo) -->
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Avatar placeholder">
+              <circle cx="12" cy="8" r="4" stroke="currentColor" stroke-width="1.5"/>
+              <path d="M4 20a8 8 0 0 1 16 0" stroke="currentColor" stroke-width="1.5"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section id="about">
+      <div class="section-title"><h2>About</h2><div class="line"></div></div>
+      <div class="panel">
+        <p>I'm a developer focused on building polished UIs and reliable systems. My toolkit includes JavaScript/TypeScript on the front end and Java for backend fundamentals. I also practice strong testing habits (manual test cases, basic automation, and CI-friendly checks).</p>
+        <p>Outside code, I like reading docs, making flashcards, and sharing what I learn.</p>
+      </div>
+    </section>
+
+    <!-- SKILLS -->
+    <section id="skills">
+      <div class="section-title"><h2>Skills</h2><div class="line"></div></div>
+      <div class="grid grid-3">
+        <div class="panel">
+          <div class="skill"><strong>HTML & CSS</strong><span>Advanced</span></div>
+          <div class="bar"><i style="width:92%"></i></div>
+        </div>
+        <div class="panel">
+          <div class="skill"><strong>JavaScript</strong><span>Advanced</span></div>
+          <div class="bar"><i style="width:88%"></i></div>
+        </div>
+        <div class="panel">
+          <div class="skill"><strong>Java / OOP</strong><span>Intermediate</span></div>
+          <div class="bar"><i style="width:70%"></i></div>
+        </div>
+        <div class="panel">
+          <div class="skill"><strong>Manual Testing</strong><span>Advanced</span></div>
+          <div class="bar"><i style="width:85%"></i></div>
+        </div>
+        <div class="panel">
+          <div class="skill"><strong>Automation Basics</strong><span>Intermediate</span></div>
+          <div class="bar"><i style="width:60%"></i></div>
+        </div>
+        <div class="panel">
+          <div class="skill"><strong>Git & CI</strong><span>Intermediate</span></div>
+          <div class="bar"><i style="width:68%"></i></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PROJECTS -->
+    <section id="projects">
+      <div class="section-title"><h2>Projects</h2><div class="line"></div></div>
+      <div class="grid grid-3">
+        <article class="panel project">
+          <div class="thumb" aria-hidden="true">
+            <svg width="56" height="56" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+              <rect x="3" y="3" width="18" height="14" rx="2"/>
+              <path d="M3 10h18"/>
+              <path d="m8 21 4-4 4 4"/>
+            </svg>
+          </div>
+          <div>
+            <h3>Portfolio Website</h3>
+            <p class="muted">Responsive, single‑file portfolio (this one!) built with modern CSS, smooth scroll, and theme toggle.</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="#">Live</a>
+            <a class="btn" href="#">Code</a>
+          </div>
+        </article>
+        <article class="panel project">
+          <div class="thumb" aria-hidden="true">
+            <svg width="56" height="56" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+              <path d="M3 3h18v14H3z"/>
+              <path d="M7 21h10"/>
+              <path d="M12 17v4"/>
+            </svg>
+          </div>
+          <div>
+            <h3>Test Case Hub</h3>
+            <p class="muted">Mini web app to write, tag, and export manual test cases as CSV. Clean UI and keyboard shortcuts.</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="#">Live</a>
+            <a class="btn" href="#">Code</a>
+          </div>
+        </article>
+        <article class="panel project">
+          <div class="thumb" aria-hidden="true">
+            <svg width="56" height="56" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+              <circle cx="12" cy="12" r="9"/>
+              <path d="M8 13l2.5 2.5L16 10"/>
+            </svg>
+          </div>
+          <div>
+            <h3>Java DSA Snippets</h3>
+            <p class="muted">Collection of clean Java solutions for common interview problems with tests and explanations.</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="#">Docs</a>
+            <a class="btn" href="#">Code</a>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- EXPERIENCE -->
+    <section id="experience">
+      <div class="section-title"><h2>Experience</h2><div class="line"></div></div>
+      <div class="panel timeline">
+        <div class="timeline-item">
+          <span class="dot"></span>
+          <div>
+            <strong>Front‑End Developer — Freelance</strong> · <span class="muted">2024 — Present</span>
+            <p class="muted">Built landing pages and dashboards. Improved performance (Lighthouse 95+), accessibility, and testing coverage.</p>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <span class="dot"></span>
+          <div>
+            <strong>QA Trainee — Personal Projects</strong> · <span class="muted">2023 — 2024</span>
+            <p class="muted">Wrote test scenarios (SDLC/STLC), prepared bug reports, and created basic automation scripts.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+      <div class="section-title"><h2>Contact</h2><div class="line"></div></div>
+      <div class="grid grid-2">
+        <div class="panel">
+          <h3>Let's work together</h3>
+          <p class="muted">Email me or message me on the platforms below. I'm open to freelance and full‑time roles.</p>
+          <div style="display:flex; gap:10px; flex-wrap:wrap; margin-top:10px">
+            <a class="btn" href="mailto:you@example.com">Email</a>
+            <a class="btn" href="https://github.com/your-username" target="_blank" rel="noopener">GitHub</a>
+            <a class="btn" href="https://www.linkedin.com/in/your-username" target="_blank" rel="noopener">LinkedIn</a>
+          </div>
+        </div>
+        <form class="panel" onsubmit="event.preventDefault(); sendMessage();">
+          <label for="name">Name</label>
+          <input id="name" name="name" required class="input" placeholder="Your name" />
+          <label for="email">Email</label>
+          <input id="email" name="email" type="email" required class="input" placeholder="you@example.com" />
+          <label for="msg">Message</label>
+          <textarea id="msg" name="msg" rows="4" required class="input" placeholder="Say hello…"></textarea>
+          <button class="btn" type="submit">Send Message</button>
+          <p id="formNote" class="muted" style="margin-top:8px"></p>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    © <span id="year"></span> Your Name — Built with ♥ in HTML/CSS/JS
+  </footer>
+
+  <script>
+    // Inputs styling via JS to keep CSS minimal
+    for (const el of document.querySelectorAll('.input')){
+      el.style.width='100'; // correct width below
+      el.style.width='100%';
+      el.style.margin='6px 0 14px';
+      el.style.padding='12px 14px';
+      el.style.borderRadius='12px';
+      el.style.border='1px solid rgba(255,255,255,.14)';
+      el.style.background='linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02))';
+      el.style.color='inherit';
+      el.style.outline='none';
+    }
+
+    // Theme toggle (light/dark)
+    const themeBtn = document.getElementById('themeBtn');
+    const themeIcon = document.getElementById('themeIcon');
+    const stored = localStorage.getItem('theme');
+    if(stored==='light') document.documentElement.classList.add('light');
+    updateIcon();
+
+    themeBtn.addEventListener('click', ()=>{
+      document.documentElement.classList.toggle('light');
+      const isLight = document.documentElement.classList.contains('light');
+      localStorage.setItem('theme', isLight ? 'light' : 'dark');
+      updateIcon();
+    });
+    function updateIcon(){
+      const isLight = document.documentElement.classList.contains('light');
+      themeIcon.textContent = isLight ? '☀️' : '🌙';
+      // swap CSS variables for light mode
+      if(isLight){
+        document.documentElement.style.setProperty('--bg','#f7f9fc');
+        document.documentElement.style.setProperty('--panel','#ffffff');
+        document.documentElement.style.setProperty('--text','#0b1020');
+        document.documentElement.style.setProperty('--muted','#5b6175');
+        document.documentElement.style.setProperty('--shadow','0 10px 24px rgba(10,15,30,.08)');
+      } else {
+        document.documentElement.style.removeProperty('--bg');
+        document.documentElement.style.removeProperty('--panel');
+        document.documentElement.style.removeProperty('--text');
+        document.documentElement.style.removeProperty('--muted');
+        document.documentElement.style.removeProperty('--shadow');
+      }
+    }
+
+    // Simple contact form handler (no backend)
+    function sendMessage(){
+      const name = document.getElementById('name').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const msg = document.getElementById('msg').value.trim();
+      const note = document.getElementById('formNote');
+      if(!name || !email || !msg){
+        note.textContent = 'Please fill all fields.'; return;
+      }
+      // mailto fallback
+      window.location.href = `mailto:you@example.com?subject=Message from ${encodeURIComponent(name)}&body=${encodeURIComponent(msg + '\n\nReply to: ' + email)}`;
+      note.textContent = 'Opening your mail app…';
+    }
+
+    // Year
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
+
+
