--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <!-- HERO -->
     <section class="hero">
       <div class="card intro">
-        <h1>Hi, I'm SUHAS S L<span style="background:linear-gradient(90deg,var(--brand),var(--brand-2)); -webkit-background-clip:text; color:transparent">Your Name</span></h1>
+        <h1>Hi, I'm <span style="background:linear-gradient(90deg,var(--brand),var(--brand-2)); -webkit-background-clip:text; color:transparent">Your Name</span></h1>
         <p class="subtitle">Front‑End Developer • Java Enthusiast • Manual/Automation Testing Learner</p>
         <div class="badges">
           <span class="badge">Java • OOP</span>
@@ -368,6 +368,7 @@
   </script>
 </body>
 </html>
+
 
 
 
